--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-<META HTTP-EQUIV=Refresh CONTENT="5; URL=http://www.informatik.uni-konstanz.de/en/arbeitsgruppen/disy/">
+<META HTTP-EQUIV=Refresh CONTENT="5; URL=http://www.disy.uni-konstanz.de/">
 </head><body>
-This site is not maintained. Forward to the homepage of the <a href="http://www.informatik.uni-konstanz.de/en/arbeitsgruppen/disy/">Distributed Systems Group, University of Konstanz</a> should occur shortly.
+This site is not maintained. Forward to the homepage of the <a href="http://www.disy.uni-konstanz.de/">Distributed Systems Group, University of Konstanz</a> should occur shortly.
 </body></html>
